update to fix misaligned view on wall btn

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -2127,7 +2127,7 @@ margin: auto
     border-radius: 4px;
     cursor: pointer;
     text-decoration: none;
-    display: block;
+    display: inline-block;
 	margin:auto;
 	line-height:44px;
 }
